# multiagent-dataSpider

./: .env.example  .gitignore  AGENT_SWARM_PROPOSAL.md  BUGS_AND_FEEDBACK.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.teamagent/: manifest.json
db/: init.sql
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/hooks/: useWebSocket.ts
frontend/src/pages/: DataPage.tsx  MonitorPage.tsx
frontend/src/store/: agentStore.ts  missionStore.ts
frontend/src/types/: index.ts
frontend/src/utils/: format.ts
services/api_gateway/: main.py
services/api_gateway/routers/: data.py  missions.py  monitor.py
services/coordinator/: coordinator.py  main.py  scheduler.py
services/crawler/: main.py  worker.py
services/crawler/strategies/: api_harvester.py  http_crawler.py
services/processor/: main.py  worker.py
services/shared/: db.py  models.py  redis_client.py
services/store/: main.py  worker.py
services/validator/: main.py  worker.py
tests/backend/: _constants.py  conftest.py  pytest.ini  requirements-test.txt  test_coordinator.py  test_crawlers.py  test_data_api.py  test_missions_api.py  test_monitor_api.py  test_processor.py  test_websocket.py
tests/frontend/: package.json  setup.ts  vitest.config.ts
tests/frontend/__mocks__/: zustand.ts
tests/frontend/components/: AgentCard.test.tsx  CircuitBadge.test.tsx  MissionForm.test.tsx  QueueDepthBar.test.tsx
tests/frontend/hooks/: useWebSocket.test.ts
(+18 files in other folders)
