[project]
name = "multiagent-dataspider"
version = "1.0.0"
description = "General-purpose multi-agent web scraping system"
requires-python = ">=3.12"

dependencies = [
    # Web framework
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.0",
    "python-multipart==0.0.17",
    "websockets==14.1",

    # Data validation
    "pydantic==2.10.1",
    "pydantic-settings==2.6.1",

    # HTTP client
    "httpx==0.27.2",

    # Redis async client
    "redis==5.2.0",

    # Database
    "sqlalchemy==2.0.36",
    "asyncpg==0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "httpx==0.27.2",        # for TestClient
    "pytest-cov==6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["services"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv]
# uv workspace configuration
dev-dependencies = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
]
